[package]
name = "wurth-radio"
authors = ["The Team Arrow Racing Association firmware development team"]
description = "Driver for the Würth Elektronik Wireless Radio module."
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "wurth_radio"

[dependencies]
embedded-hal = "0.2.7"
heapless = "0.7.16"

[features]
defmt = ["heapless/defmt"]
